// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox deve conter a classe css "disabled" 1`] = `
<label
  class="css-zm9nki"
>
  <input
    class="css-gh4k11"
    disabled=""
    type="checkbox"
  />
  <span
    class="css-181e7ho"
  />
  <span
    class="css-lyjr2k"
  >
    check
  </span>
</label>
`;

exports[`Checkbox deve renderizar corretamente 1`] = `
<label
  class="css-4g6ai3"
>
  <input
    class="css-gh4k11"
    type="checkbox"
  />
  <span
    class="css-181e7ho"
  />
  <span
    class="css-lyjr2k"
  >
    check
  </span>
</label>
`;
